test_case/rust-lang_rust/39305_275673235.rs
rust
error[E0106]: missing lifetime specifier
 --> <anon>:6:10
  |
6 |     foo: Foo,     // error: expected 1, found 0
  |          ^^^ expected lifetime parameter

thread 'rustc' panicked at 'Some expected error codes were not found: ["E0107"]'
